--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,17 @@
 .app__infoBoxs{
   display: flex;
   justify-content: space-between;
- 
+  background-color: white;
 
 }
 .app__left {
   flex: 0.9;
+}
+
+.app__title{
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
 }
 
 
