--- a/src/Header.css
+++ b/src/Header.css
@@ -3,3 +3,9 @@
     justify-content: space-between;
     margin: 10px;
 }
+
+.header__title {
+    text-align: center;
+    color: rgb(24 36 50);
+    
+}
